# revise

./: .gitignore  .~lock.revision.csv#  README.md  display.sh  pyproject.toml  revision.csv
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _csv.data.json  _csv.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  create_csv.data.json  create_csv.meta.json  csv.data.json  csv.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  make_timetable.data.json  make_timetable.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  random.data.json  random.meta.json  re.data.json  re.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  util.data.json  util.meta.json
.mypy_cache/3.7/json/: __init__.data.json  __init__.meta.json  decoder.data.json  decoder.meta.json  encoder.data.json  encoder.meta.json
.mypy_cache/3.7/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
create/: Makefile  config.json  create_csv.py  revision.csv  timetable.tex
