[tool.poetry]
name = "revision"
version = "0.1.0"
description = ""
authors = ["Sam <tritoke@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.24.2"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5"
flake8 = "^3.7"
mypy = "^0.670.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
